# AutoMLLib

./: LICENSE  README.md  pyproject.toml
src/automllib/: BinaryClassifier.py  __init__.py  utils.py
src/automllib/classifiers/: BaseModelWrapper.py  DumbDenseNet.py
src/automllib/models/: BaseModelWrapper.py  DumbDenseNet.py
tests/: __init__.py  test_binaryclassifier.py  test_dumbdensenet.py  test_utils.py
