[tool.poetry]
name = "automllib"
version = "0.0.1"
description = "Binary Classification solutions provider"
authors = ["Gosudarkin Yaroslav <gosudarkin.yaroslav@gmail.com>"]
readme = "README.md"
packages = [{include = "automllib", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
