[tool.poetry]
name = "automllib"
version = "0.0.3"
description = "Binary Classification solutions provider"
authors = ["Gosudarkin Yaroslav <gosudarkin.yaroslav@gmail.com>"]
readme = "README.md"
packages = [{include = "automllib", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.0"
tensorflow = "^2.11.0"
keras = "^2.11.0"

[tool.poetry.group.test.dependencies]
binaryornot = "^0.4"

wemake-python-styleguide = "^0.17"
flake8-pytest-style = "^1.6"
nitpick = "^0.32"

pytest = "^7.1"
pytest-randomly = "^3.12"
pytest-cookies = "^0.6"

safety = "^2.3"
tomli = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
